fixed bug on safari with hover on nav menu

--- a/assets/scss/partials/_modal-nav-hover.scss
+++ b/assets/scss/partials/_modal-nav-hover.scss
@@ -25,17 +25,15 @@
     }
 
     75% {
-        opacity: 0.75;
         width: 450px;
         height: 400px;
         margin-top: -50px;
-        border-radius: 0 0 30% 30%;
+        border-radius: 0 0 20% 20%;
     }
 
     100% {
         opacity: 1;
-        border-radius: 0 0 5% 5%;
-
+        border-radius: 0;
     }
 }
 
@@ -53,20 +51,14 @@
 
 @keyframes transition-color {
     0% {
-        background-color: transparent;
+        backdrop-filter: none;
+    }
+    50% {
+        backdrop-filter: blur(0);
     }
 
-    50% {
-        opacity: 0.3;
-        background-color: $dark-blue-11;
-    }
-    50% {
-        opacity: 0.6;
-        background-color: $dark-blue-11;
-    }
     100% {
-        opacity: 1;
-        background-color: $dark-blue-11;
+        backdrop-filter: blur(30px);
     }
 }
 
@@ -78,8 +70,6 @@
     z-index: $z-index-modal;
     backdrop-filter: blur(30px);
     height: calc(100vh - #{$height-nav});
-    animation-direction: reverse;
-    animation-name: transition-color;
 
 
     &.color-transition {
@@ -103,12 +93,16 @@
 
     .modal-body {
         overflow: hidden;
-        animation-duration: .4s;
         padding: 105px 0 0 102px;
         transition: $transition-primary;
         background-color: rgba($white, 0.87);
+        box-shadow: 0 3px 6px rgba($black, 0.16);
 
         &.circle-square-transition {
+            opacity: 0;
+            animation-delay: .4s;
+            animation-duration: .4s;
+            animation-fill-mode: forwards;
             animation-name: circle-square-transition;
         }
 
@@ -116,10 +110,10 @@
             opacity: 0;
 
             &.opacity-transition {
-                animation-delay: .4s;
+                animation-delay: .8s;
                 animation-duration: .4s;
                 animation-name: transition-opacity;
-                animation-fill-mode: forwards
+                animation-fill-mode: forwards;
             }
         }
 
